// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Themed components & hooks renders Text with fallback color 1`] = `
<Text
  style={
    [
      {
        "color": "#000",
      },
      undefined,
    ]
  }
>
  Hello
</Text>
`;

exports[`Themed components & hooks renders Text with provided lightColor 1`] = `
<Text
  style={
    [
      {
        "color": "orange",
      },
      undefined,
    ]
  }
>
  Hello
</Text>
`;

exports[`Themed components & hooks renders View with fallback backgroundColor 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#000",
      },
      undefined,
    ]
  }
/>
`;

exports[`Themed components & hooks renders View with provided lightColor 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "pink",
      },
      {
        "padding": 5,
      },
    ]
  }
/>
`;

exports[`Themed components & hooks renders with 'light' fallback when useColorScheme returns undefined 1`] = `
<Text
  style={
    [
      {
        "color": "#000",
      },
      undefined,
    ]
  }
>
  Hello
</Text>
`;
